--------
v5.0-git
--------

[mms] Check for incorrect identity on compose if a single recipient address
      is tied to a different identity than the sending identity.
[mms] Use CATENATE (RFC 4469), if available, to strip MIME parts (Request
      #8092).
[mms] Add preference to show flags created by other MUAs (Request #8882).
[mms] Added HTML signature support (Request #1406).
[mms] Simplified date sorting display (Ticket #8936).
[mms] Properly redirect messages pursuant to RFC 5322 [3.6.6].
[mms] Add redirect message capability to DIMP.
[mms] Add ability to add attachments to composed messages for advanced mobile
      browsers - disabled by default (MIMP).
[mms] Add checkbox interface to mailbox page for advanced mobile browsers -
      disabled by default (MIMP).
[mms] Add preference to allow viewing of all inline parts by default (MIMP).
[mms] Add hook to alter composed message details before sending.
[mms] DIMP now honors the 'allow_resume_all' configuration option.
[mms] Remove 'sort_limit' configuration option.
[mms] Mobile view no longer supports WML output.
[jan] Implement iTip viewer actions in DIMP (Request #8061).
[mms] Display alarm notifications in DIMP (Request #6232).
[mms] Auto-determine charset for text attachments (Bug #8858).
[mms] Remove IE 6 (and below) and Safari 2 (and below) support for DIMP.
[mms] Add chance to switch between forward options on compose page when using
      auto-forward (DIMP).
[mms] Add chance to switch reply type to single recipient on compose page when
      using auto-reply (DIMP).
[mms] Fix printing multipage HTML messages in Mozilla browsers (Bug #8708).
[mms] Provide command line script to obtain IMAP caching statistics.
[mms] Catch flag changes from other IMAP clients when refreshing if CONDSTORE
      is available on the IMAP server (DIMP).
[mms] Improved forwarding options.
[mms] Add support for LIST-STATUS IMAP extension; provides more efficient
      mailbox polling.